Fixed width on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    max-width: 100%;
 }
 section{
     min-height: 100%;
